# write-yourself-a-web-app

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
examples/: block1.rs  block2.rs  block3.rs  block4.rs  block5.rs  block6.rs
examples/migrations/block3/: 202301010000000_create_cities_table.sql
src/: main.rs
templates/: index.html  stats.html  weather.html
