[package]
name = "weather"
version = "0.1.0"
keywords = ["weather", "api", "axum", "postgres"]
readme = "README.md"
repository = "https://github.com/corrode/write-yourself-a-web-app"
categories = ["web-programming", "network-programming"]
description = "Simple web app to learn Rust, axum, Postgres"
license = "MIT"
edition = "2021"

[dependencies]
axum = "0.7.5"
base64 = "0.22.1"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.39.2", features = ["full"] }
